fix: fix hamburger position on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -400,10 +400,7 @@ input[type="text"], input[type="email"], input[type="tel"]{
     }
 
     .hamburger-symbol{
-        top:62px;
-        position:absolute;
-        font-size:36px;
-        left:50%;
+        font-size:40px;
     }
 }
 
